# mouse

./: .gitmodules  CMakeLists.txt  README.md  challenge.cpp  challenge_complex.cpp  main.cpp  train.cpp  train_complex.cpp
dataset/: sample.csv  sample.txt  sample_complex.csv
src/: Histogram.hpp  Histogram2D.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  WordDictionary.hpp
tests/: Histogram2DTest.cpp  Histogram2DTest.hpp  HistogramTest.cpp  HistogramTest.hpp  NeuralNetworkTest.cpp  NeuralNetworkTest.hpp  test.cpp
trained/: sample11-12-1.nn  sample_complex201-50-2.nn
